--- a/src/app/winner/winner.component.html
+++ b/src/app/winner/winner.component.html
@@ -1,42 +1,47 @@
-<button (click)="main()">Principal</button>
-<div>
-    <label for="loteryList" class="form-label">Lotería</label>
-    <input class="form-control" list="codeOptions" id="loteryList" (change)="change($event)" >
-    <datalist id="codeOptions">            
-        <option *ngFor="let lotery of loteries">{{lotery.name}}</option>
-    </datalist>        
-</div>    
-<div>
-    <label class="title">Número</label>
-    <input class="input" [(ngModel)]="numberWinner" maxlength="4"/>
-</div>
-<div>
-    <label class="title">Fecha</label>
-    <input type="date" [(ngModel)]="date"/>
-</div>
-<button type="button" (click)="find()">Buscar</button>
-
-<table class="table">
-    <thead>
-    <tr>
-        <th scope="col">Número</th>        
-        <th scope="col">Juego</th>  
-        <th scope="col">Valor</th>  
-        <th scope="col">Lotería</th>
-        <th scope="col">Vendedor</th>
-        <th scope="col">Fecha</th>
-        <th scope="col">Usuario</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr *ngFor="let value of this.winnerList">
-        <td>{{value.number}}</td>        
-        <td>{{value.type}}</td>      
-        <td>{{value.value}}</td>        
-        <td>{{value.name}}</td>        
-        <td>{{value.vendor_code}}</td>  
-        <td>{{value.DATE | date:'short'}}</td>
-        <td>{{value.USERNAME}}</td>
-    </tr>      
-    </tbody>
-</table>
+<div class="container">
+    <div class="container__menu">
+        <button class="bttn bttn-primary" (click)="main()">Principal</button>        
+    </div>
+    <div class="container__content">
+        <div>
+            <div class="card">
+                <label class="input-label">Lotería</label>                
+                <input class="form-control" list="codeOptions" id="loteryList" (change)="change($event)" >
+                <datalist id="codeOptions">            
+                    <option *ngFor="let lotery of loteries">{{lotery.name}}</option>
+                </datalist>        
+                <label class="input-label">Número</label>
+                <input type="text" class="form-control" [(ngModel)]="numberWinner" minlength="3" maxlength="4">
+                <label class="input-label">Fecha</label>
+                <input type="date" class="form-control" [(ngModel)]="date">
+                <div class="full-width">
+                    <button type="button" class="bttn bttn-primary" (click)="find()">Buscar</button>                    
+                </div>                
+            </div>
+            <div class="card">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th scope="col">Número</th>        
+                        <th scope="col">Juego</th>  
+                        <th scope="col">Valor</th>  
+                        <th scope="col">Lotería</th>
+                        <th scope="col">Vendedor</th>
+                        <th scope="col">Fecha</th>
+                        <th scope="col">Usuario</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr *ngFor="let value of this.winnerList">
+                        <td>{{value.number}}</td>        
+                        <td>{{value.type}}</td>      
+                        <td>{{value.value}}</td>        
+                        <td>{{value.name}}</td>        
+                        <td>{{value.vendor_code}}</td>  
+                        <td>{{value.DATE | date:'short'}}</td>
+                        <td>{{value.USERNAME}}</td>
+                    </tr>      
+                    </tbody>
+                </table>
+            </div>
+        </div>
