--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -12,103 +12,94 @@
                 <datalist id="codeOptions">            
                     <option *ngFor="let code of codes" [value]="code.code">{{code.code}}</option>
                 </datalist>        
-            </div>    
-        <div>
-        <div class="card">
-            <label class="input-label">Loterias del dia</label>            
-            <div class="label-checkbox">
+            </div>            
+            <div class="card" style="display:block">
+                <label class="input-label">Loterías</label>                                    
                 <label class="label-checkbox">
                     <input class="chkbox" type="checkbox" [checked]="this.isAllLoteries" (click)="all()" value="" id="flexCheckDefault">
                     Todas
-                </label>            
-            </div>  
-            <div class="row" *ngFor="let loterie of this.loteries">            
-                <div class="label-checkbox">
-                    <label class="label-checkbox">
-                        <input class="chkbox" id="{{loterie.code}}"  type="checkbox" [checked]="loterie.checked" (click)="selected(loterie)" value="" id="flexCheckDefault">
-                        {{loterie.name}}
-                    </label>            
-                </div>                  
-            </div>            
-        </div>
-        <div class="card">
-            <label class="input-label">Opciones</label>                                    
-                <div class="label-checkbox">
-                    <label class="label-checkbox">
-                        <input class="chkbox" type="checkbox" [checked]="this.isLastThree" (click)="lastThree()" value="" id="flexCheckDefault">                        
-                        Tres últimas
-                    </label>            
-                    <div *ngIf="isLastThree">
-                        <label class="title">Valor</label>
-                        <input class="input" (keyup.enter)="onEnterLTPrice()" [(ngModel)]="priceLt"/>
-                    </div>    
-                </div>                  
-                <div class="label-checkbox">
-                    <label class="label-checkbox">
-                        <input class="chkbox" type="checkbox" (click)="cuna()" [checked]="this.isCuna"  value="" id="flexCheckDefault">                        
-                        Cuña
-                    </label>            
-                    <div *ngIf="isCuna">
-                        <label class="title">Valor</label>
-                        <input class="input" (keyup.enter)="onEnterCunaPrice()"  [(ngModel)]="priceCuna"/>
+                </label>                              
+                <label class="label-checkbox" *ngFor="let loterie of this.loteries">
+                    <input class="chkbox" id="{{loterie.code}}"  type="checkbox" [checked]="loterie.checked" (click)="selected(loterie)" value="" id="flexCheckDefault">
+                    {{loterie.name}}
+                </label>                                                  
+            
+                <label class="input-label">Opciones</label>                                    
+                    <div class="label-checkbox">
+                        <label class="label-checkbox">
+                            <input class="chkbox" type="checkbox" [checked]="this.isLastThree" (click)="lastThree()" value="" id="flexCheckDefault">                        
+                            Tres últimas
+                            <div *ngIf="isLastThree">
+                                <label >Valor</label>
+                                <input (keyup.enter)="onEnterLTPrice()" [(ngModel)]="priceLt"/>
+                            </div>    
+                        </label>                                    
+                    </div>                  
+                    <div class="label-checkbox">
+                        <label class="label-checkbox">
+                            <input class="chkbox" type="checkbox" (click)="cuna()" [checked]="this.isCuna"  value="" id="flexCheckDefault">                        
+                            Cuña
+                        </label>            
+                        <div *ngIf="isCuna">
+                            <label class="input-label">Valor</label>
+                            <input class="form-control" (keyup.enter)="onEnterCunaPrice()"  [(ngModel)]="priceCuna"/>
+                        </div>
+                    </div>                                  
+                    <div class="label-checkbox">
+                        <label class="label-checkbox">
+                            <input class="chkbox" type="checkbox" value="" (click)="combined()" id="flexCheckDefault">                        
+                            Combinado
+                        </label>                                
+                    </div>                                  
+                </div>        
+            <div class="card">
+                <div class="form-container">
+                    <div class="form">
+                        <div class="full-width">
+                            <div class="row">
+                                <div class="col-12">
+                                    <label class="input-label">Número</label>
+                                    <input type="text" class="form-control" [(ngModel)]="number" (keyup.enter)="onEnter()" minlength="3" maxlength="4">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-12">
+                                    <label class="input-label">Valor</label>
+                                    <input type="text" class="form-control" (keyup.enter)="onEnterPrice()" [(ngModel)]="price">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-12">
+                                    <label class="input-label">Total</label>
+                                    <input type="text" class="form-control" disabled [(ngModel)]="total">
+                                </div>
+                            </div>
+                            <div >
+                                <button type="button" class="bttn bttn-primary full-width" (click)="save()">Guardar</button>
+                                <button type="button" class="bttn bttn-primary full-width" (click)="clearAllData()">Limpiar</button>                            
+                            </div>
+                        </div>                
                     </div>
-                </div>                                  
-                <div class="label-checkbox">
-                    <label class="label-checkbox">
-                        <input class="chkbox" type="checkbox" value="" (click)="combined()" id="flexCheckDefault">                        
-                        Combinado
-                    </label>                                
-                </div>                                  
-            </div>
-        </div>
-        <div class="card">
-            <div class="form-container">
-                <div class="form">
-                    <div class="full-width">
-                        <div class="row">
-                            <div class="col-12">
-                                <label class="input-label">Número</label>
-                                <input type="text" class="form-control" [(ngModel)]="number" (keyup.enter)="onEnter()" minlength="3" maxlength="4">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-12">
-                                <label class="input-label">Valor</label>
-                                <input type="text" class="form-control" (keyup.enter)="onEnterPrice()" [(ngModel)]="price">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-12">
-                                <label class="input-label">Total</label>
-                                <input type="text" class="form-control" disabled [(ngModel)]="total">
-                            </div>
-                        </div>
-                        <div >
-                            <button type="button" class="bttn bttn-primary full-width" (click)="save()">Guardar</button>
-                            <button type="button" class="bttn bttn-primary full-width" (click)="clearAllData()">Limpiar</button>                            
-                        </div>
-                    </div>                
-                </div>
-                <div class="table-container">
-                    <table class="table table-hover">
-                        <thead>
-                            <tr>
-                                <th>Número</th>            
-                                <th>Valor</th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                        <tr *ngFor="let value of this.numbersAddedLst">
-                            <td>{{value.number}}</td>            
-                            <td>{{value.price}}</td>
-                            <td><button type="button" class="btn btn-danger" (click)="delete(value)">Eliminar</button></td>                            
-                        </tr>      
-                        </tbody>
-                    </table>
+                    <div class="table-container">
+                        <table class="table table-hover">
+                            <thead>
+                                <tr>
+                                    <th>Número</th>            
+                                    <th>Valor</th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            <tr *ngFor="let value of this.numbersAddedLst">
+                                <td>{{value.number}}</td>            
+                                <td>{{value.price}}</td>
+                                <td><button type="button" class="btn btn-danger" (click)="delete(value)">Eliminar</button></td>                            
+                            </tr>      
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>        
+        </div>        
     </div>
 </div>
