--- a/src/app/forbidden/forbidden.component.html
+++ b/src/app/forbidden/forbidden.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" *ngIf="isLogged">
     <div class="container__menu">
         <button class="bttn bttn-primary" (click)="main()">Principal</button>        
     </div>
