--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-    <div class="container__menu">
+<div class="container" *ngIf="isLogged">
+    <div class="container__menu" *ngIf="isAdmin">
         <button class="bttn bttn-primary"  (click)="forbidden()">Prohibidos</button>
         <button class="bttn bttn-primary" (click)="winners()">Ganadores</button>
         <button class="bttn bttn-primary" (click)="limits()">Cubrir</button>        
