--- a/src/app/winner/winner.component.html
+++ b/src/app/winner/winner.component.html
@@ -29,6 +29,7 @@
                         <th scope="col">Vendedor</th>
                         <th scope="col">Fecha</th>
                         <th scope="col">Usuario</th>
+                        <th scope="col">Premio</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -40,6 +41,7 @@
                         <td>{{value.vendor_code}}</td>  
                         <td>{{value.DATE | date:'short'}}</td>
                         <td>{{value.USERNAME}}</td>
+                        <td>{{value.prize}}</td>
                     </tr>      
                     </tbody>
                 </table>
