--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,7 +21,17 @@
     background: orangered;
     color: white;
   }
-  
+  .success {
+    display: block;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
+    width: 100%;
+    color: white;
+    background: rgb(5, 131, 42);
+    padding: 2rem;
+    border-radius: 5px;
+    margin-bottom: 1.5rem;
+  }
+
   .card {
     display: block;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
