--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -84,6 +84,11 @@
                             </div>
                             <div >
                                 <button type="button" class="bttn bttn-primary full-width" (click)="save()">Guardar</button>
+                                <div class="spinner" *ngIf="isLoading">
+                                    <div class="bounce1"></div>
+                                    <div class="bounce2"></div>
+                                    <div class="bounce3"></div>
+                                </div>
                                 <button type="button" class="bttn bttn-primary full-width" (click)="clearAllData()">Limpiar</button>                            
                             </div>
                         </div>                
