--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -4,6 +4,7 @@
         <button class="bttn bttn-primary"  (click)="forbidden()">Prohibidos</button>
         <button class="bttn bttn-primary" (click)="winners()">Ganadores</button>
         <button class="bttn bttn-primary" (click)="limits()">Cubrir</button>        
+        <button class="bttn bttn-primary" (click)="graphics()">Graficos</button>                
     </div>
     <div class="container__content">
         <div>            
