--- a/src/app/winner/winner.component.html
+++ b/src/app/winner/winner.component.html
@@ -44,7 +44,7 @@
                         <td>{{value.value}}</td>        
                         <td>{{value.name}}</td>        
                         <td>{{value.vendor_code}}</td>  
-                        <td>{{value.DATE | date:'short'}}</td>
+                        <td>{{value.DATE | date:'short':'+0500'}}</td>
                         <td>{{value.USERNAME}}</td>
                         <td>{{value.prize}}</td>
                     </tr>      
