Update minutes to close and logout

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -4,7 +4,8 @@
         <button class="bttn bttn-primary"  (click)="forbidden()">Prohibidos</button>
         <button class="bttn bttn-primary" (click)="winners()">Ganadores</button>
         <button class="bttn bttn-primary" (click)="limits()">Cubrir</button>        
-        <button class="bttn bttn-primary" (click)="graphics()">Graficos</button>                
+        <button class="bttn bttn-primary" (click)="graphics()">Graficos</button>   
+        <button class="bttn bttn-primary" (click)="logout()">Salir</button>             
     </div>
     <div class="container__content">
         <div>            
