--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -5,7 +5,8 @@
         <button class="bttn bttn-primary" (click)="winners()">Ganadores</button>
         <button class="bttn bttn-primary" (click)="limits()">Cubrir</button>        
         <button class="bttn bttn-primary" (click)="graphics()">Graficos</button>   
-        <button class="bttn bttn-primary" (click)="logout()">Salir</button>             
+        <button class="bttn bttn-primary" (click)="logout()">Salir</button> 
+        <label class="input-label">Versión: 1.109</label>              
     </div>
     <div class="container__content">
         <div>            
