Update new features, Admin of vendor, user , lot

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -4,9 +4,12 @@
         <button class="bttn bttn-primary"  (click)="forbidden()" *ngIf="isAdmin">Prohibidos</button>
         <button class="bttn bttn-primary" (click)="winners()" *ngIf="isAdmin">Ganadores</button>
         <button class="bttn bttn-primary" (click)="limits()" *ngIf="isAdmin">Cubrir</button>        
-        <button class="bttn bttn-primary" (click)="graphics()" *ngIf="isAdmin">Graficos</button>   
+        <button class="bttn bttn-primary" (click)="graphics()" *ngIf="isAdmin || isSupervisor">Graficos</button>  
+        <button class="bttn bttn-primary" (click)="users()" *ngIf="isAdmin">Usuarios</button>   
+        <button class="bttn bttn-primary" (click)="vendors()" *ngIf="isAdmin">Vendedores</button>   
+        <button class="bttn bttn-primary" (click)="loteriesBtn()" *ngIf="isAdmin">Loterias</button>   
         <button class="bttn bttn-primary" (click)="logout()">Salir</button> 
-        <label class="input-label">Versión: 1.109_1</label>              
+        <label class="input-label">Versión: 2.125_1</label>              
         <!-- Version.MonthDay_versionofDay-->
     </div>
     <div class="container__content">
